@@ -1,6 +1,10 @@
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 eclipse.project.name = appName + '-core'
 
+compileTestJava {
+  options.compilerArgs << "-Xlint:unchecked"
+}
+
 dependencies {
   api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
@@ -12,4 +16,16 @@ dependencies {
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
+
+  testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+
+  testImplementation 'org.mockito:mockito-core:5.11.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+  testImplementation 'org.junit.platform:junit-platform-launcher:1.11.4'
+}
+
+test {
+  useJUnitPlatform()
+  jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
